[gd_scene load_steps=4 format=3 uid="uid://b0dq2lqje636u"]

[ext_resource type="Script" uid="uid://c6pvu3e2vqoxc" path="res://scripts/LobbyUI.gd" id="1_6jt0u"]
[ext_resource type="StyleBox" uid="uid://csoueac0hekfp" path="res://textures/button_hover.tres" id="2_cdhm0"]
[ext_resource type="StyleBox" uid="uid://cv8ltfne0egh2" path="res://textures/button.tres" id="2_ras1x"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 350.0
offset_bottom = 350.0
script = ExtResource("1_6jt0u")

[node name="ModeDropdown" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("2_cdhm0")
theme_override_styles/pressed = ExtResource("2_cdhm0")
theme_override_styles/normal = ExtResource("2_ras1x")
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("2_cdhm0")
theme_override_styles/pressed = ExtResource("2_cdhm0")
theme_override_styles/normal = ExtResource("2_ras1x")
text = "Join Game"

[node name="LogLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
